fix overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@ li {
   font-family: "Orbitron", sans-serif;
 }
 body {
-  margin: 0;
   font-family: "Poppins", sans-serif;
   min-width: 320px;
   min-height: 100vh;
